# WikiTools-FullNative

./: .gitignore  PRESENTATION_TECHNIQUE.md  README.md  SCRIPT_INJECTION.txt  create_db.js  package-lock.json  setup.iss
WikiApp/: package-lock.json  package.json
WikiApp/src/: App.css  App.tsx
WikiApp/src-tauri/: Cargo.toml  tauri.conf.json
WikiApp/src-tauri/capabilities/: localhost.json
WikiApp/src-tauri/icons/: icon.icns
WikiApp/src-tauri/resources/postgresql/lib/: libecpg.lib  libecpg_compat.lib  libpgtypes.lib  pgevent.lib  postgres.lib
WikiApp/src-tauri/src/: lib.rs  main.rs  postgres_manager.rs
wiki/: package.json
wiki/server/views/: master.pug  setup.pug
wiki/server/views/legacy/: master.pug
